--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -15,11 +15,29 @@
   }
 
   &--footer {
+    &-link {
+      grid-column: 2;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      border: none;
+      height: 50px;
+      width: 50px;
+      background-color: $square-color-orange;
+
+      @include onTablet {
+        height: 70px;
+        width: 70px;
+      }
+    }
+
     @include onTablet {
       grid-column: 2 / 6;
       grid-template-columns: 374px 70px;
       grid-row-start: 4;
-      column-gap: 16px;
+      column-gap: 40px;
     }
 
     @include onDesktop {
@@ -28,8 +46,8 @@
   }
 
   &__input {
-    height: 50px;
-    width: 240px;
+    height: 44px;
+    width: 230px;
     outline: none;
     color: $text-color-main;
     font-family: $font-family-secondary;
@@ -49,24 +67,6 @@
       -webkit-box-shadow: 0 0 0 30px $text-color-main inset;
     }
 
-    &--header {
-      border: 1px solid $text-color-green;
-
-      &::placeholder {
-        color: $text-color-main;
-        font-family: $font-family-main;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 100%;
-        padding-left: 60px;
-      }
-
-      @include onTablet {
-        width: 270px;
-        height: 70px;
-      }
-    }
-
     &--footer {
       &::placeholder {
         color: $text-color-grey;
@@ -78,8 +78,8 @@
       }
 
       @include onTablet {
-        width: 374px;
-        height: 70px;
+        width: 370px;
+        height: 66px;
       }
     }
   }
