add task solution

--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -68,6 +68,7 @@
 }
 
 .wrapper {
+  margin: 0 auto;
   box-sizing: border-box;
   @include PaddingInlain;
   @include pageGrid;
@@ -124,6 +125,8 @@
 }
 
 .side__bottom {
+  display: flex;
+  flex-direction: column;
   grid-column: 1 / -1;
 
   @include onTablet {
@@ -152,7 +155,7 @@
   }
 
   @include onDesktop {
-    width: 170px;
+    min-width: 170px;
     margin-right: 30px;
   }
 }
