--- a/src/styles/current__events.scss
+++ b/src/styles/current__events.scss
@@ -1,11 +1,11 @@
-section {
+.main {
   position: relative;
   width: 100%;
   min-width: 320px;
   height: 100%;
 }
 
-.current__events {
+.current {
   @include content;
   margin-top: 70px;
 
@@ -14,12 +14,13 @@ section {
   }
 }
 
-.current__events--title {
+.current--title {
   margin: 0 auto;
   grid-column: 1 / -1;
   width: min-content;
 
   @include onTablet {
+    margin: 0;
     font-size: 48px;
     width: fit-content;
     grid-column: 1 / 5;
@@ -29,4 +30,161 @@ section {
     width: fit-content;
     grid-column: 1 / 6;
   }
+}
+
+.current__image {
+  width: 100%;
+  height: 100%;
+
+  grid-column: 1 / -1;
+  margin-top: 40px;
+
+  @include onTablet {
+    margin-top: 48px;
+  }
+
+  @include onDesktop {
+    margin-top: 56px;
+
+    grid-column: 1 / 8;
+  }
+}
+
+.current__picture {
+  width: 100%;
+}
+
+.current__description {
+  margin-top: 24px;
+  grid-column: 1 / -1;
+
+  @include onTablet {
+    margin-top: 40px;
+
+    grid-column: 1 / 5;
+  }
+
+  @include onDesktop {
+    margin: auto 0;
+    grid-column: 9 / -1;
+  }
+}
+
+.exhibition {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.exhibition__item {
+  color: #687480;
+  font-weight: 500;
+  line-height: 100%;
+  font-size: 16px;
+  margin: 0;
+
+  @include onTablet {
+    font-size: 14px;
+  }
+}
+
+.exhibition__date {
+  color: $museum-green;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 150%;
+  margin: 0;
+
+  @include onTablet {
+    font-size: 14px;
+  }
+}
+
+.exhibition__title {
+  position: relative;
+  color: #0f0e08;
+  font-family: "Montserrat", sans-serif;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 100%;
+  width: fit-content;
+
+  display: flex;
+  align-items: center;
+  margin: 0;
+  margin-top: 15px;
+
+  @include onTablet {
+    margin-top: 32px;
+    font-size: 36px;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    right: -30px;
+    width: 10px;
+    height: 10px;
+    flex-shrink: 0;
+    background: #f14a27;
+  }
+}
+
+.exhibition__description {
+  color: #4e4e4e;
+  font-size: 16px;
+  font-style: normal;
+}
+
+.article--2 {
+  margin-top: 60px;
+
+  @include onTablet {
+    margin-top: 64px;
+  }
+
+  @include onDesktop {
+    margin-top: 104px;
+  }
+}
+
+.current__bottom-bg {
+  width: 100%;
+  min-height: 210px;
+  margin-top: 60px;
+
+  @include onTablet {
+    margin-top: 112px;
+    height: 390px;
+    box-sizing: border-box;
+    padding-inline: 0;
+    object-fit: cover;
+  }
+
+  @include onDesktop {
+    margin-top: 112px;
+    box-sizing: border-box;
+    padding-inline: 34px;
+    height: 550px;
+
+    object-fit: cover;
+  }
+}
+
+.current__bottom-description {
+  padding-inline: 20px;
+  right: 50%;
+  width: 280px;
+  height: 140px;
+  background: #fff;
+  box-shadow: rgba(26, 90, 76, 0.25);
+}
+
+.current__bottom__title {
+  text-align: center;
+}
+
+.current__bottom__title::after {
+  display: none;
+
 }
