--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,8 +1,5 @@
 .header {
   position: relative;
-  width: 100%;
-  min-width: 320px;
-  height: 100%;
 
   @include onTablet {
     height: 374px;
@@ -30,7 +27,6 @@
     }
 
     @include onDesktop {
-      width: 57%;
       height: 655px;
     }
   }
@@ -38,7 +34,7 @@
   &__title {
     display: flex;
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
     margin-top: 259px;
 
     color: #000;
@@ -51,6 +47,7 @@
     grid-column: 1 / -1;
 
     @include onTablet {
+      margin: 0;
       text-align: left;
       font-size: 54px;
       margin-top: 40px;
@@ -152,8 +149,8 @@
 }
 
 .container {
-  @include content;
   padding-top: 10px;
+  @include content;
 
   @include onTablet {
     padding-top: 15px;
