fixed header-image, fixed link in a button

--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -25,11 +25,19 @@
       border: none;
       height: 50px;
       width: 50px;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-image: url(../images/icon/icon-arrow-black.svg);
       background-color: $square-color-orange;
+      transition: transform 0.3s ease-in;
 
       @include onTablet {
         height: 70px;
         width: 70px;
+      }
+
+      &:hover {
+        transform: scale(1.1);
       }
     }
 
