--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -8,14 +8,14 @@
   height: 100vh;
 
   background-image: url(../images/bg-image/bg-image-header.png);
-  background-size: 100% 50vh;
+  background-size: 100%;
   background-repeat: no-repeat;
   background-color: #fff;
 
   @include onTablet {
     background-image: url(../images/bg-image/bg-image-header-tablet.png);
-    background-size: 50% 100%;
-    background-position: right;
+    background-size: 50%;
+    background-position: top right;
     height: 60vh;
     grid-template-rows: 80px 1fr;
     row-gap: 64px;
