--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,23 +1,10 @@
 .container {
   margin: 0 auto;
   padding: 0 20px;
-
-  @include onMobile {
-    width: 300px;
-    padding: 0;
-  }
   @include onTablet {
-    width: 700px;
-    padding: 0;
+    padding: 0 35px 36px;
   }
   @include onDesktop {
-    width: 1170px;
-    padding: 0;
+    padding: 0 55px 35px;
   }
-  @include onDesign {
-    width: 1300px;
-    padding: 0;
-  }
-
-
 }
