--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,17 +1,38 @@
 .menu {
-  background-color: #1A5A4C;
-  height: 233px;
-  &__content {
-    display: flex;
-flex-direction: row;
-
-    box-sizing: border-box;
-margin: 0;
-margin-top: 45px;
-
+  background-color: $colorMainSubtitle;
+  transition: $transition;
+  overflow-y: auto;
+  @include onDesktop {
+    height: 233px;
   }
 
+  &__content {
+    box-sizing: border-box;
+    margin: 0;
+    margin-top: 33px;
+    @include onDesktop {
+      margin-top: 45px;
+    }
+  }
 
+  &__header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    @include onTablet {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+
+  &__topBlock {
+    display: flex;
+    flex-direction: row;
+    gap: 33px;
+    @include onDesktop {
+      gap: 35px;
+    }
+  }
 
   &__close {
     display: block;
@@ -19,66 +40,112 @@ margin-top: 45px;
     background-repeat: no-repeat;
     width: 13px;
     height: 13px;
-
   }
 
-  &__list{
+  &__list {
     display: flex;
-    gap: 115px;
+    gap: 50px;
+    margin-left: 75px;
+    margin-top: -15px;
+    @include onTablet {
+      margin-left: 0;
+      margin-top: 0;
+    }
+    @include onDesktop {
+      gap: 100px;
+    }
 
-  &--top, &--bottom {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
+    &--top, &--bottom {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      @include onDesktop {
+        gap: 30px;
+      }
+    }
   }
 
-
-  }
-
-  &__link{
+  &__link {
     margin: 0;
     text-decoration: none;
     font-family: 'IBM Plex Sans', sans-serif;
     font-weight: 500;
-    color: #FFFFFF;
-    font-size: 22px;
-    line-height: 22px;
+    color: #fff;
+    font-size: 16px;
+    line-height: 16px;
+    @include onDesktop{
+      font-size: 22px;
+    }
   }
-&__item{
-  list-style: none;
-}
 
-&__hr{
-margin: 0;
-height: 145px;
-}
-&__work{
-gap: 40px;
-}
+  &__item {
+    list-style: none;
+  }
 
-}
-
-.work{
-display: flex;
-  &__title{
+  &__hr {
+    display: flex;
     margin: 0;
-    margin-bottom: 40px;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    @include onDesktop{
+     margin: 0;
+    }
+  }
+
+  &__work {
+    padding-right: 0;
+    flex-direction: column;
+    @include onTablet {
+      justify-content: space-between;
+      gap: 40px;
+      flex-direction: row;
+      padding-right: 50px;
+    }
+    @include onDesktop {
+      gap: 40px;
+      flex-direction: row;
+      padding-right: 100px;
+    }
+  }
+}
+
+.work {
+  display: flex;
+  &__title {
+    margin: 0;
+    margin-bottom: 20px;
     @include styleHeader;
     line-height: 20px;
 
-    &--list{
+    &--list {
       list-style: none;
       @include styleHeader;
       line-height: 21px;
+      span {
+        font-weight: 600;
+      }
     }
   }
-&__add{
-margin-top: 60px;
 
-}
-
-&__text{
-  margin:0;
-  @include styleHeader;
-}
+  &__add {
+    margin-top: 15px;
+    @include onTablet {
+      margin-top: 40px;
+    }
   }
+
+  &__text {
+    @include styleHeader;
+    word-wrap: break-word;
+    span {
+      font-weight: 600;
+    }
+    @include onTablet {
+      width: 144px;
+    }
+    @include onDesktop {
+      width: 144px;
+    }
+  }
+}
+
