--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
 $c-gray: #eee;
+$colorTitleExhibition: #687480;
+$colorMainSubtitle: #1a5a4c;
+$buttonColorMain: #f14a27;
+$fontsPlexSans: 'IBM Plex Sans', sans-serif;
+$transition: all 0.5s ease-in-out;
