--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -3,13 +3,13 @@
   width: 18px;
   height: 12px;
   background-repeat: no-repeat;
-  transition: all 0.4s ease-in-out;
-
+  transition: $transition;
+  position: absolute;
+  top: 33px;
+  @include onDesktop {
+    top: 35px;
+  }
   &--menu {
     background-image: url(../images/details/open.svg);
-
-    &:hover {
-      background-image: url(../images/details/close.svg);
-    }
   }
 }
