--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,12 +1,10 @@
 .gallery {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr;
 
   &__picture {
     width: 100%;
-    height: 410px;
+    height: 100%;
     object-fit: cover;
-    object-position: center;
   }
 }
