--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,4 +10,5 @@
 @import "./blocks/picture.scss";
 @import "./blocks/separator.scss";
 @import "./blocks/gallery.scss";
-@import "./blocks/slider.scss";
+/*@import "./blocks/slider.scss";*/
+@import "./blocks/swiper.scss";
