--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "utils/mixins";
+@import "blocks/header";
+@import "blocks/page.scss";
+@import "blocks/top-bar";
+@import "blocks/aside";
+@import "blocks/events";
+@import "blocks/lection";
+@import "blocks/galery";
+@import "blocks/subscribe";
+@import "blocks/footer";
+@import "blocks/nav";
