--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
 @import "utils";
-@import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "reset";
+@import "./container";
+@import "./header";
+@import "./menu";
+@import "./page";
+@import "./events";
+@import "./gallery";
+@import "./subscription";
+@import "./footer";
