create subscribe section

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -1,12 +1,18 @@
 .button {
   width: 280px;
   height: 50px;
-  border: 1px solid #1a5a4c;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
+  justify-content: space-between;
+
+  &--green {
+    border: 1px solid #1A5A4C;
+  }
+
+  &--red {
+    border: transparent;
+  }
 
   &__tickets {
     font-family: IBM Plex Sans, sans-serif;
@@ -15,17 +21,41 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
-    text-align: center;
-    width: 230px;
+    padding-left: 80px;
   }
 
   &__arrow {
     width: 50px;
     height: 50px;
     text-align: center;
-    background-color: #1a5a4c;
-    background-image: url("../images/icons/arrow_right.svg");
     background-repeat: no-repeat;
     background-position: center;
+
+    &--green {
+      background-color: #1a5a4c;
+      background-image: url("../images/icons/arrow_right-white.svg");
+    }
+
+    &--red {
+      background-color: #F14A27;
+      background-image: url("../images/icons/arrow_right-black.svg");
+    }
+  }
+
+  &__subscribe {
+    text-align: left;
+    width: 230px;
+    background: #FFF;
+    border: transparent;
+    padding-left: 24px;
+
+    ::placeholder {
+      color: #687480;
+      font-family: Montserrat, sans-serif;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 14px;
+    }
   }
 }
