--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,4 @@
 @import "./blocks/gallery.scss";
 /*@import "./blocks/slider.scss";*/
 @import "./blocks/swiper.scss";
+@import "./blocks/subscribe.scss";
