--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -112,6 +112,7 @@
       font-style: normal;
       font-weight: 400;
       line-height: 150%; /* 21px */
+      white-space: nowrap;
 
       &:hover {
         text-decoration: underline;
