--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,6 +1,7 @@
 .menu {
   position: fixed;
   height: 100vh;
+
   background-color: rgba(24, 24, 26, 0.5);
   top: 0;
   left: 0;
@@ -20,6 +21,8 @@
   &__content {
     position: fixed;
     background-color: $c-green;
+    max-width: 1280px;
+    margin: 0 auto;
     right: 0;
     left: 0;
     top: 0;
