--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -40,10 +40,12 @@
     }
 
     &__image {
-      width: 280px;
+      width: 100%;
       height: 410px;
-      background-size: cover;
-      background-repeat: no-repeat;
+      object-fit: cover;
+      object-position: top;
+
+      grid-column: 1 / -1;
 
       @include hover(transform, scale(1.05));
 
