--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -2,7 +2,8 @@
   min-width: 320px;
   max-width: 1280px;
   margin: 0 auto;
-
+  overflow-x: hidden;
+  
   scroll-behavior: smooth;
 
   &:has(.menu:target) {
