--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,107 @@
+@mixin onTablet {
+  @media (min-width: $tablet-min-width) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: $desktop-min-width) {
+    @content;
+  }
+}
+
 @mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
+  transition: #{$_property} 0.5s;
   &:hover {
     #{$_property}: $_toValue;
   }
+}
+
+@mixin contentPaddingInline() {
+  padding-inline: 20px;
+
+  @include onTablet {
+    padding-inline: 39px;
+    margin-inline: auto;
+
+    @include onDesktop {
+      padding-inline: 55px;
+    }
+  }
+}
+
+@mixin headerMenuPaddingLeft() {
+  padding-left: 20px;
+  
+  @include onTablet {
+    padding-left: 39px;
+  }
+
+  @include onDesktop {
+    padding-left: 55px;
+  }
+}
+
+@mixin pageGrid {
+  --columns: 2;
+  display: grid;
+  column-gap: 20px;
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include onTablet {
+    --columns: 6;
+    column-gap: 30px;
+  }
+
+  @include onDesktop {
+    --columns: 12;
+    
+  }
+}
+
+@mixin greenButtons {
+  width: 280px;
+  height: 50px;
+
+  border: 1px solid $color-green;
+}
+
+@mixin underlineLinks () {
+  content: "";
+  position: absolute;
+  bottom: 1px;
+  display: block;
+  height: 1px;
+  width: 100%;
+  background-color: $color-white;
+
+  transition: transform $effectDuration;
+  transform: scale(0);
+  transform-origin: center;
+}
+
+@mixin arrow () {
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/icons/arrow-icon-black.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 24px 24px;
+  margin-left: 16px;
+
+  @include onTablet() {
+    width: 70px;
+    height: 70px;
+  }
+
+  @include onDesktop() {
+    margin-left: 30px;
+  }
+}
+
+@mixin underline() {
+  display: inline-block;
+  width: 100%;
+  height: 1px;
+  opacity: 50%;
 }
