fixed separator & subscribe positioning / start contact-us section

--- a/src/styles/blocks/separator.scss
+++ b/src/styles/blocks/separator.scss
@@ -5,6 +5,9 @@
   align-items: center;
 
   &__image {
+    background-image: url(../images/separator_image.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
     width: 100%;
     height: 210px;
     object-fit: cover;
