--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,19 +1,26 @@
 .subscribe {
-  background-image: url(../images/subscribe_image.jpg);
-  background-repeat: no-repeat;
-  background-position: center center;
-  width: 100%;
-  height: 386px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: absolute;
-  z-index: 1;
   margin: 0 -20px;
+
+  &__background {
+    background-image: url(../images/subscribe_image.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 386px;
+    object-fit: cover;
+    object-position: center;
+    position: relative;
+    z-index: 0;
+  }
 
   &__title {
     color: #FFF;
     margin-top: 88px;
+    position: absolute;
+    z-index: 1;
   }
 
   &__text {
@@ -24,6 +31,14 @@
     font-style: normal;
     font-weight: 400;
     line-height: 27px;
-    margin: 20px 20px 50px;
+    margin: 144px 20px 0px;
+    position: absolute;
+    z-index: 1;
+  }
+
+  &__button {
+    margin: 248px 20px 0px;
+    position: absolute;
+    z-index: 1;
   }
 }
