--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,4 @@
 /*@import "./blocks/slider.scss";*/
 @import "./blocks/swiper.scss";
 @import "./blocks/subscribe.scss";
+@import "./blocks/contact-us.scss";
