add task corrections

--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -89,7 +89,9 @@
   &__photo {
     width: 100%;
     overflow: hidden;
+  }
 
+  &__photo-big {
     @include hover(transform, scale(1.05));
   }
 
