html & css for section contact us

--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -1,16 +1,5 @@
 .contact-us {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-
-  &__headline {
-
-  }
-
-  &__wrap-socials {
-
-  }
-
-  &__logo {
-
-  }
+  grid-template-columns: 130px 128px;
+  gap: 20px;
 }
