--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -12,11 +12,19 @@
     line-height: 36px;
   }
 
-  &--third {
+  &__third {
     font-size: 28px;
     font-weight: 400;
     line-height: 28px;
     letter-spacing: 0;
+    text-align: left;
+  }
+
+  &__fourth {
+    font-family: IBM Plex Sans;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
     text-align: left;
   }
 
