--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,3 +14,8 @@
 @import "./blocks/swiper.scss";
 @import "./blocks/subscribe.scss";
 @import "./blocks/contact-us.scss";
+@import "./blocks/opening.scss";
+@import "./blocks/address.scss";
+@import "./blocks/socials.scss";
+@import "./blocks/line.scss";
+@import "./blocks/links.scss";
