add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,43 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+.main {
+  margin: 0;
+  padding: 0;
 
-body {
-  background: $c-gray;
+  &__container {
+
+    @include onTablet {
+      @include contentPaddingInline;
+    }
+
+    @include onDesktop {
+      padding: 0;
+    }
+  }
+
+  &__content {
+    @include contentPaddingInline;
+
+    @include onTablet {
+      padding: 0;
+    }
+
+    @include onDesktop {
+      @include contentPaddingInline;
+      margin-top: 200px;
+    }
+  }
+
+  &__title {
+    @include contentPaddingInline;
+    text-align: center;
+    margin: 253px 0 40px;
+
+    @include onTablet {
+      text-align: left;
+      margin: 88px 0 48px;
+    }
+
+    @include onDesktop {
+      margin: 200px 0 56px;
+    }
+  }
 }
