--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,27 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  line-height: 100%; /* 45px */
+}
+
+%h2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 100%; /* 45px */
+
+  @include onTablet {
+    font-size: 48px;
+  }
+}
+
+%h3 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 28px;
   font-weight: 400;
+  line-height: 100%;
+
+  @include onTablet {
+    font-size: 36px;
+  }
 }
