--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
-$c-gray: #eee;
+$tables-min-width: 765px;
+$desktop-min-width: 1280px;
+
+$white: #fff;
+$black: #0f0e08;
+$aside: #1a5a4c;
+$grey: #687480;
+$dark-grey: #4e4e4e;
+$red: #f14a27;
+$line: #1a5a4c80;
