--- a/src/styles/top-bar.scss
+++ b/src/styles/top-bar.scss
@@ -12,7 +12,9 @@
   }
 
   &__logo {
+    position: relative;
     flex: 1;
-    text-align: center;
+    display: flex;
+    justify-content: center;
   }
 }
