--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -176,6 +176,7 @@
     font-size: 12px;
     font-weight: 300;
     line-height: 140%;
+    cursor: pointer;
 
     @include onTablet {
       margin: 0;
@@ -188,6 +189,7 @@
     font-size: 12px;
     font-weight: 300;
     line-height: 140%;
+    cursor: pointer;
 
     @include onTablet {
       margin: 0;
@@ -211,5 +213,6 @@
     color: $black;
     font-weight: 400;
     line-height: 150%;
+    cursor: pointer;
   }
 }
