html & css for footer ready

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
 
   &--green {
-    border: 1px solid #1A5A4C;
+    border: 1px solid #1a5a1a4c;
   }
 
   &--red {
@@ -37,7 +37,7 @@
     }
 
     &--red {
-      background-color: #F14A27;
+      background-color: #f14a27;
       background-image: url("../images/icons/arrow_right-black.svg");
     }
   }
@@ -45,7 +45,7 @@
   &__subscribe {
     text-align: left;
     width: 230px;
-    background: #FFF;
+    background: #fff;
     border: transparent;
     padding-left: 24px;
 
