--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -21,7 +21,7 @@
   }
 
   &__fourth {
-    font-family: IBM Plex Sans;
+    font-family: IBM Plex Sans, sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
