--- a/src/styles/follow.scss
+++ b/src/styles/follow.scss
@@ -59,6 +59,7 @@
     font-weight: 400;
     line-height: 100%;
     border: none;
+    outline: none;
     vertical-align: middle;
 
     @include onTablet {
