--- a/src/styles/icon.scss
+++ b/src/styles/icon.scss
@@ -7,9 +7,11 @@
   &--menu {
     background-image: url(../images/icon/baseline-menu.svg);
     order: 0;
+    @include hover (transform, scale(1.05));
   }
 
   &--close {
     background-image: url(../images/icon/ri-close-fill.svg);
+    @include hover (transform, scale(1.05));
   }
 }
