--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -5,6 +5,7 @@
 .page {
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 14px;
+  scroll-behavior: smooth;
 
   &:has(.page__menu:target) {
     overflow: hidden;
