--- a/src/styles/product.scss
+++ b/src/styles/product.scss
@@ -62,6 +62,7 @@
   &__rectangle {
     width: 10px;
     height: 10px;
+    @include hover (transform, scale(1.05));
 
     @include onTablet {
       width: 15px;
@@ -167,5 +168,6 @@
 
   &__img {
     width: 100%;
+    @include hover (transform, scale(1.05));
   }
 }
