--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -22,6 +22,27 @@
     }
   }
 
+&__museum {
+  margin-top: 15px;
+  width: 220px;
+  &--logo{
+    position: absolute;
+    height: 72px;
+    transition: $transition;
+    top: 20px;
+    right: 44%;
+    &:hover {
+    transform: scale(1.1);
+    }
+    @include onTablet {
+      right: 38%;
+    }
+    @include onDesktop {
+      right: 42%;
+    }
+  }
+}
+
   &__wrapper {
     display: flex;
     flex-direction: column;
