--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -10,6 +10,7 @@
     box-sizing: border-box;
     margin: 0;
     margin-top: 33px;
+    margin-bottom: 27px;
     @include onDesktop {
       margin-top: 45px;
     }
