--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -6,9 +6,10 @@
   @include onTablet {
     text-align: left;
     margin-top: 107px;
+    font-size: 48px;
   }
   @include onDesktop {
     text-align: left;
-    margin-top: 200px;
+    margin-top: 100px;
   }
 }
