--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,3 +4,4 @@ $colorMainSubtitle: #1a5a4c;
 $buttonColorMain: #f14a27;
 $fontsPlexSans: 'IBM Plex Sans', sans-serif;
 $transition: all 0.5s ease-in-out;
+$colorFooter: #0f0e08;
