--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -2,9 +2,9 @@
   margin: 0 auto;
   padding: 0 20px;
   @include onTablet {
-    padding: 0 35px 36px;
+    padding: 0 35px 0;
   }
   @include onDesktop {
-    padding: 0 55px 35px;
+    padding: 0 55px 0;
   }
 }
