--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -46,7 +46,7 @@
   &__list {
     display: flex;
     gap: 50px;
-    margin-left: 75px;
+    margin-left: 46px;
     margin-top: -15px;
     @include onTablet {
       margin-left: 0;
@@ -74,7 +74,11 @@
     color: #fff;
     font-size: 16px;
     line-height: 16px;
-    @include onDesktop{
+    transition: $transition;
+    &:hover {
+      color: #0a3810;
+    }
+    @include onDesktop {
       font-size: 22px;
     }
   }
@@ -88,7 +92,7 @@
     margin: 0;
     margin-top: 24px;
     margin-bottom: 24px;
-    @include onDesktop{
+    @include onDesktop {
      margin: 0;
     }
   }
