html & css for menu ready

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -3,6 +3,10 @@
   height: 24px;
 
   &__menu {
-    background-image: url("../images/icons/menu_burger.svg");
+    background-image: url(../images/icons/menu_burger.svg);
+  }
+
+  &__cross {
+    background-image: url(../images/icons/cross.svg);
   }
 }
