--- a/src/styles/blocks/line.scss
+++ b/src/styles/blocks/line.scss
@@ -12,5 +12,11 @@
     color: #1a5a4c80;
     background-color: #1a5a4c80;
     border: 0px;
+
+    &--white {
+      color: #fff;
+      background-color: #fff;
+      margin-top: -24px;
+    }
   }
 }
