--- a/src/styles/blocks/links.scss
+++ b/src/styles/blocks/links.scss
@@ -1,8 +1,21 @@
 .links {
-  color: #0f0e08;
-  font-family: IBM Plex Sans;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 14px;
+
+  &__list{
+    display: grid;
+    grid-template-columns: 130px 130px;
+    gap: 20px;
+  }
+
+  &__item {
+  }
+
+  &__link {
+    color: #0f0e08;
+    font-family: IBM Plex Sans;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px;
+    text-decoration: none;
+  }
 }
