--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -26,6 +26,10 @@
     font-style: normal;
     font-weight: 400;
     text-align: left;
+
+    &--white {
+      color: #fff;
+    }
   }
 
   &--rectangle {
