--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,3 +20,5 @@
 @import "./blocks/line.scss";
 @import "./blocks/links.scss";
 @import "./blocks/footer.scss";
+@import "./blocks/navigation.scss";
+@import "./blocks/menu.scss";
