problem with menu

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,6 +1,15 @@
 .menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  transform: translateX(-100%);
   background-color: #1a5a4c;
   padding: 27px 20px;
+
+  :target {
+    transform: translateX(0);
+  }
 
   &__links {
     display: flex;
