add task correction

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,14 @@
 @import "utils/mixins";
 @import "utils/vars";
 @import "blocks/header";
+@import "blocks/footer.scss";
+@import "blocks/current-events.scss";
+@import "blocks/buttons.scss";
 @import "blocks/icons-logo";
 @import "blocks/section-title";
-@import "blocks/buttons";
 @import "blocks/menu";
-@import "blocks/current-events";
 @import "blocks/gallery";
 @import "blocks/subscribe";
-@import "blocks/footer";
 @import "blocks/nav";
 
 body {
