--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -132,7 +132,7 @@
 
 .third-photo {
   width: 100%;
-  
+
   @include onDesktop {
     grid-column: 1/-1;
   }
@@ -144,13 +144,13 @@
   text-decoration: none;
   color: $color-black;
 
-  &::after {
+  &:after {
     @include underlineLinks;
     background-color: $color-black;
     opacity: 50%;
   }
 
-  &:hover::after {
+  &:hover:after {
     transform: scale(1);
   }
 }
