--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -39,13 +39,13 @@
     line-height: 14px;
   }
 
-  &__nav-link::after {
+  &__nav-link:after {
     @include underlineLinks;
     background-color: $color-black;
     opacity: 60%;
   }
  
-  &__nav-link:hover::after {
+  &__nav-link:hover:after {
     transform: scale(1);
   }
 
@@ -203,13 +203,13 @@
   text-decoration: none;
   color: $color-black;
 
-  &::after {
+  &:after {
     @include underlineLinks;
     background-color: $color-black;
     opacity: 60%;
   }
 
-  &:hover::after {
+  &:hover:after {
     transform: scale(1);
   }
 }
