--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -145,7 +145,15 @@
   color: $color-black;
 
   &:after {
-    @include underlineLinks;
+    content: "";
+    position: absolute;
+    bottom: 1px;
+    display: block;
+    height: 1px;
+    width: 100%;
+    transition: transform $effectDuration;
+    transform: scale(0);
+    transform-origin: center;
     background-color: $color-black;
     opacity: 50%;
   }
