corrections of footers-style

--- a/src/styles/blocks/buttons.scss
+++ b/src/styles/blocks/buttons.scss
@@ -44,13 +44,13 @@
     @include hover(transform, scale(1.2));
   }
 
-  &__button:after {
+  &__button::after {
     @include underlineLinks;
     background-color: $color-black;
     opacity: 80%;
   }
 
-  &__button:hover:after {
+  &__button:hover::after {
     transform: scale(1);
   }
 }
