--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -144,21 +144,13 @@
   text-decoration: none;
   color: $color-black;
 
-  &:after {
-    content: "";
-    position: absolute;
-    bottom: 1px;
-    display: block;
-    height: 1px;
-    width: 100%;
-    transition: transform $effectDuration;
-    transform: scale(0);
-    transform-origin: center;
+  &::after {
+    @include underlineLinks;
     background-color: $color-black;
     opacity: 50%;
   }
 
-  &:hover:after {
+  &:hover::after {
     transform: scale(1);
   }
 }
